[package]
name = "anyflow"
version = "0.1.0"
edition = "2018"



[dependencies]
async-trait = "0.1"
async-recursion = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" , features = ["raw_value"] }
futures = { version = "0.3.17" }
async-std = { version="1.1"}
# macros = { path = "macros"}
dashmap = "5.0.0"
pin-project = "1"
tower-service= {version = "0.3"}
tokio = {version = "1.12.0", features = ["full"] }

[dev-dependencies]
criterion = "0.3"
tokio = {version = "1.12.0", features = ["full"] }
smol = {version = "1.2.5"}

[[bench]]
name = "benchmark"
harness = false