[package]
name = "calculator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyflow = { path = "../../../anyflow"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" , features = ["raw_value"] }
tokio = {version = "1.12.0", features = ["full"] }
smol = {version = "1.2.5"}
pprof = { version = "0.6.0", features = ["flamegraph"] }
regex = "1"
async-std = {version="1"}
futures = { version = "0.3.17" }