[package]
name = "web-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.4"
anyflow = { path = "../../../anyflow"}
macros = { path = "../../../anyflow/macros"}
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" , features = ["raw_value"] }
async-trait = "0.1"